Improvements with ReadEngine/WriteEngine